# TurtleEngineFrontend

./: .eslintrc.cjs  .gitignore  Cargo.toml  README.md  build_all_wasm.bat  index.html  package.json  pnpm-lock.yaml  splashscreen.html  tsconfig.json  vite.config.ts
meta/: meta.xml  structures.meta.xml
public/hdrs/: city.hdr
public/meshes/: error.glb  spot3d_.glb
public/translation/: cz.json  en.json  sk.json
res/: Icon Pack A.eps  Left-bar design.afdesign
src/: AntdConfig.tsx  App.css  App.tsx  MuiOverride.css  WasmEntry.tsx  i18n.tsx  index.css  main.tsx
src-asny/: Cargo.toml  webbuild.bat
src-asny/src/: main.rs
src-fs/: Cargo.toml
src-fs/src/: lib.rs
src-go/: go.mod  go.sum  main.go
src-go/api/: a.go  scenes.go
src-go/auth/: a.go
src-go/credentials/: a.go
src-go/ctrl/: scenes.go
src-go/db/: storage_azure.go
src-go/models/: user.go
src-go/vfs/: a.go
src-structures/: Cargo.toml
src-structures/src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/app/: mod.rs
src-tauri/src/database/: mod.rs
src-tauri/src/plugins/: mod.rs
src-tauri/src/plugins/assets/: imops.rs  mod.rs  params.rs
src-tauri/src/plugins/images/: imops.rs  mod.rs
src-tauri/src/plugins/os/: mod.rs
src-tauri/src/plugins/project/: _project.rs  assets.rs  cache.rs  files.rs  mod.rs  scenes.rs  storage.rs
src-tauri/src/plugins/sqlite/: mod.rs
src-testgo/: go.mod  main.go
src-testgo/tools/: a.go
src/api/: ApiDispatcher.ts  AppApi.ts  AssetApiParams.ts  AssetsApi.ts  AxiosProvider.ts  ConstantsApi.ts  FsApi.ts  FsTauriApi.ts  FsTools.ts  ImagesApi.ts  LanguagesApi.ts  PlatformDispatcher.ts  SceneApi.ts  ScenesApi.ts  TraningsApi.ts  UsersApi.ts
src/app/: AppRoutes.tsx  AppRoutes_Editor.tsx  AppRoutes_Player.tsx  GlobalAppLock.tsx  LanguagesManager.ts  Main.tsx  MainNavBar.tsx  (+1 more)
(+328 files in other folders)
