[package]
name = "turtlengine"
version = "0.1.0"
description = "A Tauri App"
authors = ["Erik Palencik"]
license = "MIT"
repository = ""
default-run = "turtlengine"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
image = "0.24.6"
futures = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["api-all"] }

tfs = { path = "../src-fs" }
tstructures = { path = "../src-structures" }


#Plugin
tauri-plugin-window-state = "0.1"

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


[dependencies.rusqlite]
version = "0.29.0"
features = ["bundled"]




[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

